Started to integrate pathway.v2 in entourage; refactoring; bug fixing