@@ -41,6 +41,7 @@ import org.caleydo.core.view.opengl.canvas.IGLCanvas;
 import org.caleydo.core.view.opengl.canvas.IGLKeyListener;
 import org.caleydo.core.view.opengl.canvas.remote.IGLRemoteRenderingView;
 import org.caleydo.core.view.opengl.layout.ALayoutRenderer;
+import org.caleydo.core.view.opengl.layout.util.multiform.DefaultVisInfo;
 import org.caleydo.core.view.opengl.layout.util.multiform.IMultiFormChangeListener;
 import org.caleydo.core.view.opengl.layout.util.multiform.MultiFormRenderer;
 import org.caleydo.core.view.opengl.layout2.AGLElementGLView;
@@ -734,28 +735,40 @@ public class GLEntourage extends AGLElementGLView implements IMultiTablePerspect
 	}
 
 	private void createPathwayMultiFormRenderer(PathwayGraph pathway, EnumSet<EEmbeddingID> embeddingIDs,
-			final AnimatedGLElementContainer parent, Object layoutData, MultiFormInfo info) {
+			final AnimatedGLElementContainer parent, Object layoutData, PathwayMultiFormInfo info) {
 		MultiFormRenderer renderer = new MultiFormRenderer(this, false);
 		renderer.addChangeListener(this);
 		// renderer.setUseScreenCoordinateViewFrustum(true);
 		info.multiFormRenderer = renderer;
 
 		for (EEmbeddingID embedding : embeddingIDs) {
-			int rendererID = PathwayViews.addPathwayView(this, pathway, dataMappingState.getTablePerspectives(),
-					dataMappingState.getPathwayMappedTablePerspective(), pathEventSpace, embedding, renderer);
-			if (rendererID == -1)
+			IPathwayRepresentation pathwayRepresentation = PathwayViews.getPathwayRepresenation(this, pathway,
+					dataMappingState.getTablePerspectives(), dataMappingState.getPathwayMappedTablePerspective(),
+					pathEventSpace, embedding);
+			if (pathwayRepresentation == null)
 				continue;
+			String iconPath = PathwayViews.getPathwayIconPath(this, embedding);
+
+			AGLView view = pathwayRepresentation.asAGLView();
+			ALayoutRenderer layoutRenderer = pathwayRepresentation.asLayoutRenderer();
+			int rendererID = -1;
+			if (view != null) {
+				rendererID = renderer.addView(view, iconPath, new DefaultVisInfo(), false, false);
+			} else if (layoutRenderer != null) {
+				rendererID = renderer.addLayoutRenderer(layoutRenderer, iconPath, new DefaultVisInfo(), false);
+			}
+
 			List<Integer> rendererIDList = info.embeddingIDToRendererIDs.get(embedding);
 			if (rendererIDList == null) {
 				rendererIDList = new ArrayList<>();
 				info.embeddingIDToRendererIDs.put(embedding, rendererIDList);
 			}
 			rendererIDList.add(rendererID);
-			initPathwayRepresentation(renderer, rendererID);
+			initPathwayRepresentation(pathwayRepresentation);
+			info.pathwayRepresentations.put(rendererID, pathwayRepresentation);
 		}
 
-		final GLPathwayWindow pathwayWindow = new GLPathwayWindow(pathway.getTitle(), this,
-				(PathwayMultiFormInfo) info, false);
+		final GLPathwayWindow pathwayWindow = new GLPathwayWindow(pathway.getTitle(), this, info, false);
 		pathwayWindow.onClose(new ICloseWindowListener() {
 			@Override
 			public void onWindowClosed(GLWindow w) {
@@ -803,45 +816,44 @@ public class GLEntourage extends AGLElementGLView implements IMultiTablePerspect
 		parent.add(window);
 	}
 
-	private void initPathwayRepresentation(MultiFormRenderer renderer, int rendererID) {
-		IPathwayRepresentation pathwayRepresentation = getPathwayRepresentation(renderer, rendererID);
-		if (pathwayRepresentation != null) {
-			// PathwayGraph pathway = pathwayRepresentation.getPathway();
-			// pathwayRepresentation.addVertexRepBasedContextMenuItem(new VertexRepBasedContextMenuItem(
-			// "Show Node Info", ShowNodeInfoEvent.class, pathEventSpace));
-			// pathwayRepresentation.addVertexRepBasedContextMenuItem(new ShowCommonNodeItem(
-			// ShowCommonNodePathwaysEvent.class, pathEventSpace));
-			pathwayRepresentation.addVertexRepBasedContextMenuItem(new VertexRepBasedContextMenuItem("Show Context",
-					ShowNodeContextEvent.class, pathEventSpace));
+	private void initPathwayRepresentation(IPathwayRepresentation pathwayRepresentation) {
 
-			pathwayRepresentation.addVertexRepSelectionListener(new IVertexRepSelectionListener() {
+		// PathwayGraph pathway = pathwayRepresentation.getPathway();
+		// pathwayRepresentation.addVertexRepBasedContextMenuItem(new VertexRepBasedContextMenuItem(
+		// "Show Node Info", ShowNodeInfoEvent.class, pathEventSpace));
+		// pathwayRepresentation.addVertexRepBasedContextMenuItem(new ShowCommonNodeItem(
+		// ShowCommonNodePathwaysEvent.class, pathEventSpace));
+		pathwayRepresentation.addVertexRepBasedContextMenuItem(new VertexRepBasedContextMenuItem("Show Context",
+				ShowNodeContextEvent.class, pathEventSpace));
 
-				@Override
-				public void onSelect(PathwayVertexRep vertexRep, Pick pick) {
-					switch (pick.getPickingMode()) {
-					case CLICKED:
-						new ShowNodeContextEventFactory(pathEventSpace, GLEntourage.this).triggerEvent(vertexRep);
-						break;
-					case MOUSE_OVER:
-						new SelectPathwayEventFactory(pathEventSpace).triggerEvent(vertexRep);
-						break;
-					case DOUBLE_CLICKED:
-						new AddPathwayEventFactory(pathEventSpace).triggerEvent(vertexRep);
-						break;
-					default:
-						break;
-					}
+		pathwayRepresentation.addVertexRepSelectionListener(new IVertexRepSelectionListener() {
 
+			@Override
+			public void onSelect(PathwayVertexRep vertexRep, Pick pick) {
+				switch (pick.getPickingMode()) {
+				case CLICKED:
+					new ShowNodeContextEventFactory(pathEventSpace, GLEntourage.this).triggerEvent(vertexRep);
+					break;
+				case MOUSE_OVER:
+					new SelectPathwayEventFactory(pathEventSpace).triggerEvent(vertexRep);
+					break;
+				case DOUBLE_CLICKED:
+					new AddPathwayEventFactory(pathEventSpace).triggerEvent(vertexRep);
+					break;
+				default:
+					break;
 				}
-			});
 
-			// pathwayRepresentation.addVertexRepBasedSelectionEvent(
-			// new ShowNodeContextEventFactory(pathEventSpace, this), PickingMode.CLICKED);
-			// pathwayRepresentation.addVertexRepBasedSelectionEvent(new AddPathwayEventFactory(pathEventSpace),
-			// PickingMode.DOUBLE_CLICKED);
-			// pathwayRepresentation.addVertexRepBasedSelectionEvent(new SelectPathwayEventFactory(pathEventSpace),
-			// PickingMode.MOUSE_OVER);
-		}
+			}
+		});
+
+		// pathwayRepresentation.addVertexRepBasedSelectionEvent(
+		// new ShowNodeContextEventFactory(pathEventSpace, this), PickingMode.CLICKED);
+		// pathwayRepresentation.addVertexRepBasedSelectionEvent(new AddPathwayEventFactory(pathEventSpace),
+		// PickingMode.DOUBLE_CLICKED);
+		// pathwayRepresentation.addVertexRepBasedSelectionEvent(new SelectPathwayEventFactory(pathEventSpace),
+		// PickingMode.MOUSE_OVER);
+
 	}
 
 	private void removePathwayWindow(GLPathwayWindow pathwayWindow) {
@@ -896,34 +908,6 @@ public class GLEntourage extends AGLElementGLView implements IMultiTablePerspect
 	protected GLElement createRoot() {
 
 		return root;
-	}
-
-	/**
-	 * Gets the renderer of the specified {@link MultiFormRenderer} as {@link IPathwayRepresentation}.
-	 *
-	 * @param renderer
-	 * @param id
-	 *            id of the visualization in the renderer.
-	 * @return The pathway representation or null, if the active renderer is no pathway representation.
-	 */
-	protected IPathwayRepresentation getPathwayRepresentation(MultiFormRenderer renderer, int id) {
-		// int id = renderer.getActiveRendererID();
-		IPathwayRepresentation pathwayRepresentation = null;
-
-		if (renderer.isView(id)) {
-			AGLView view = renderer.getView(id);
-			if (view instanceof IPathwayRepresentation) {
-				pathwayRepresentation = (IPathwayRepresentation) view;
-
-			}
-		} else {
-			ALayoutRenderer layoutRenderer = renderer.getLayoutRenderer(id);
-			if (layoutRenderer instanceof IPathwayRepresentation) {
-				pathwayRepresentation = (IPathwayRepresentation) layoutRenderer;
-			}
-		}
-
-		return pathwayRepresentation;
 	}
 
 	protected Rect getAbsoluteVertexLocation(IPathwayRepresentation pathwayRepresentation, PathwayVertexRep vertexRep,
@@ -1178,11 +1162,16 @@ public class GLEntourage extends AGLElementGLView implements IMultiTablePerspect
 	 */
 	protected class PathwayMultiFormInfo extends MultiFormInfo {
 		protected PathwayGraph pathway;
+		protected Map<Integer, IPathwayRepresentation> pathwayRepresentations = new HashMap<>();
 		protected int age;
 
 		@Override
 		protected boolean isInitialized() {
-			return super.isInitialized() && pathway != null;
+			return super.isInitialized() && pathway != null && pathwayRepresentations != null;
+		}
+
+		public IPathwayRepresentation getCurrentPathwayRepresentation() {
+			return pathwayRepresentations.get(multiFormRenderer.getActiveRendererID());
 		}
 	}
 
@@ -1231,7 +1220,7 @@ public class GLEntourage extends AGLElementGLView implements IMultiTablePerspect
 		public void onPathSelection(PathwayPathSelectionEvent event) {
 			path = event.getPath();
 			if (path.size() > 0) {
-				PathSegment segment = path.get(path.size() - 1);
+				PathSegment segment = path.getLast();
 				PathwayMultiFormInfo info = getPathwayMultiFormInfo(segment.getPathway());
 				if (info != null) {
 					lastUsedRenderer = info.multiFormRenderer;
@@ -1321,14 +1310,6 @@ public class GLEntourage extends AGLElementGLView implements IMultiTablePerspect
 		return null;
 	}
 
-	public PathwayMultiFormInfo getPathwayMultiFormInfo(int pathwayID) {
-		for (PathwayMultiFormInfo info : pathwayInfos) {
-			if (info.pathway.getID() == pathwayID)
-				return info;
-		}
-		return null;
-	}
-
 	private PathwayMultiFormInfo getInfo(PathwayVertexRep vertexRep) {
 		for (PathwayMultiFormInfo info : pathwayInfos) {
 			if (info.pathway == vertexRep.getPathway())
@@ -1374,13 +1355,10 @@ public class GLEntourage extends AGLElementGLView implements IMultiTablePerspect
 					PathwayMultiFormInfo info2 = getInfo(segment.get(0));
 					if (pathwayRow.getVisibility() == EVisibility.NONE || info1 == null || info2 == null)
 						continue;
-					Rect loc1 = getAbsoluteVertexLocation(
-							getPathwayRepresentation(info1.multiFormRenderer,
-									info1.multiFormRenderer.getActiveRendererID()), lastNodeOfPrevSegment,
-							info1.container);
-					Rect loc2 = getAbsoluteVertexLocation(
-							getPathwayRepresentation(info2.multiFormRenderer,
-									info2.multiFormRenderer.getActiveRendererID()), segment.get(0), info2.container);
+					Rect loc1 = getAbsoluteVertexLocation(info1.getCurrentPathwayRepresentation(),
+							lastNodeOfPrevSegment, info1.container);
+					Rect loc2 = getAbsoluteVertexLocation(info2.getCurrentPathwayRepresentation(), segment.get(0),
+							info2.container);
 					augmentation.add(new LinkRenderer(this, true, loc1, loc2, info1, info2, 1, false, false, false,
 							true, lastNodeOfPrevSegment, segment.get(0), connectionBandRenderer));
 				}
@@ -1546,8 +1524,7 @@ public class GLEntourage extends AGLElementGLView implements IMultiTablePerspect
 	protected Pair<Rect, Boolean> getPortalLocation(PathwayVertexRep vertexRep, PathwayMultiFormInfo info) {
 		Rect rect = null;
 		boolean isLocationWindow = false;
-		IPathwayRepresentation pathwayRepresentation = getPathwayRepresentation(info.multiFormRenderer,
-				info.multiFormRenderer.getActiveRendererID());
+		IPathwayRepresentation pathwayRepresentation = info.getCurrentPathwayRepresentation();
 		if (pathwayRepresentation != null)
 			rect = getAbsoluteVertexLocation(pathwayRepresentation, vertexRep, info.container);
 
